test/type-error-3.err.expect
test/type-error-3.ktn:3:1: error: cannot solve scalar type constraint char = [char]
test/type-error-3.ktn:3:9: note: char is from here
test/type-error-3.ktn:3:9: note: [char] is from here
